# llm-knowledge-extractor

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: interfaces.py  main.py
src/app/api/: models.py  router.py
src/app/database/: connection.py  models.py  repositories.py
src/app/domain/: entities.py  keyword_extractor.py  use_cases.py
src/app/llm/: openai_client.py
tests/: test_knowledge_extractor.py
